# ranges

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/lk/: fold.hpp  lk.hpp  ranges.hpp  scan.hpp  utils.hpp  views.hpp
